# ned-pv-forecast

./: .pre-commit-config.yaml  .pylintrc  README.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/: FUNDING.yml
.github/workflows/: build.yaml  ci.yml  docker-publish.yml  ha_integration_ci.yml  ha_test.yml  hacs_ha_test.yml  pylint.yml  python-package.yml  python_ci.yml  python_ha_ci.yml  release.yml  test.yml
brands/: README.md
custom_components/pv_forecast/: __init__.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  sensor.py
pv-forecast-addon/: Dockerfile  config.json
src/: main.py
tests/: conftest.py  test_integration.py  test_main.py  test_sensor_compat.py
