[project]
name = "pv-forecast-ned-nl"
version = "0.1.0"
description = "Home Assistant integration for PV Forecast NED.nl"
requires-python = ">=3.13"
dependencies = [
    "homeassistant==2025.7.2",
    "pylint==2.17.4",
    "pylint-strict-informational==0.1",
    "pytest",
    "pytest-cov",
    "pytest-asyncio"
]

[tool.setuptools]
packages = ["custom_components.pv_forecast"]
